[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twave-knowledge-atlas"
version = "0.1.0"
description = "Lightweight multidomain knowledge atlas for TWave"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8",
]

[project.scripts]
atlas = "twave_knowledge_atlas.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
